# mysya-server

./: .gitignore  CMakeLists.txt  README.md
src/masya/test/: CMakeLists.txt  event_loop_test.cc  logger_test.cc  thread_test.cc
src/mysya/: CMakeLists.txt  class_util.h  condition_variable.h  dynamic_buffer.cc  dynamic_buffer.h  event_channel.cc  event_channel.h  event_loop.cc  event_loop.h  exception.cc  exception.h  logger.cc  logger.h  mutex.h  socket_address.cc  socket_address.h  tcp_socket.cc  tcp_socket.h  tcp_socket_app.cc  tcp_socket_app.h  thread.cc  thread.h  timestamp.cc  timestamp.h  timing_wheel.cc  timing_wheel.h
src/mysya/codec/: CMakeLists.txt  protobuf_codec.cc  protobuf_codec.h
src/mysya/codec/tests/: CMakeLists.txt  protobuf_codec_test.cc
src/mysya/ioevent/: CMakeLists.txt  condition_variable.h  dynamic_buffer.cc  dynamic_buffer.h  event_channel.cc  event_channel.h  event_loop.cc  event_loop.h  logger.cc  logger.h  mutex.h  socket_address.cc  socket_address.h  tcp_socket.cc  tcp_socket.h  tcp_socket_app.cc  tcp_socket_app.h  thread.cc  thread.h  timing_wheel.cc  timing_wheel.h
src/mysya/ioevent/tests/: CMakeLists.txt  event_loop_test.cc  logger_test.cc  tcp_socket_app_test.cc  tcp_socket_test.cc  thread_test.cc  timing_wheel_test.cc
src/mysya/qservice/: CMakeLists.txt  errno.h  event_loop_thread_pool.cc  event_loop_thread_pool.h  message_queue.cc  message_queue.h  tcp_service.cc  tcp_service.h  transport_agent.cc  transport_agent.h
src/mysya/qservice/tests/: CMakeLists.txt  broadcast_client_test.cc  broadcast_server_test.cc  echo_client_test.cc  echo_server_test.cc  tcp_service_test.cc
src/mysya/tests/: CMakeLists.txt  event_loop_test.cc  logger_test.cc  tcp_socket_app_test.cc  tcp_socket_test.cc  thread_test.cc  timing_wheel_test.cc
src/mysya/util/: CMakeLists.txt  class_util.h  exception.cc  exception.h  hex_dump.cc  hex_dump.h  timestamp.cc  timestamp.h
src/tutorial/orcas/: CMakeLists.txt
src/tutorial/orcas/combat/: CMakeLists.txt  base64.cc  base64.h  message_dispatcher.cc  message_dispatcher.h  pool_template.h  transport_channel.cc  transport_channel.h
src/tutorial/orcas/combat/client/: CMakeLists.txt  combat_session.cc  combat_session.h  combat_sessions.cc  combat_sessions.h
src/tutorial/orcas/combat/protocol/cc/: message.pb.cc  message.pb.h
src/tutorial/orcas/combat/protocol/meta/: CMakeLists.txt  combat_message.proto  message.proto
src/tutorial/orcas/combat/server/: CMakeLists.txt  app_server.cc  app_server.h  app_session.cc  app_session.h  apps.cc  apps.h  combat_building_field.cc  combat_building_field.h  combat_building_field_pool.cc  combat_building_field_pool.h  combat_event_handler.cc  combat_event_handler.h  combat_field.cc  combat_field.h  combat_field_manager.cc  combat_field_manager.h  combat_message_handler.cc  combat_message_handler.h  combat_role_field.cc  combat_role_field.h  combat_role_field_manager.cc  combat_role_field_manager.h  combat_warrior_field.cc  combat_warrior_field.h  combat_warrior_field_pool.cc  combat_warrior_field_pool.h  configs.cc  configs.h  configs.xml.example  event_dispatcher.cc  event_dispatcher.h  main.cc  math.cc  math.h  require_dispatcher.cc  require_dispatcher.h  require_handler.cc  require_handler.h  user_combat_message_handler.cc  (+9 more)
src/tutorial/orcas/combat/server/ai/: ai_app.cc  ai_app.h  auto.cc  auto.h  auto_manager.cc  auto_manager.h  auto_status.cc  auto_status.h  auto_status_attack.cc  auto_status_attack.h  auto_status_chase.cc  auto_status_chase.h  auto_status_move.cc  auto_status_move.h  auto_status_search.cc  auto_status_search.h  building.cc  building.h  building_manager.cc  building_manager.h  building_status.cc  building_status.h  building_status_host.cc  building_status_host.h  building_status_retrieve.cc  building_status_retrieve.h  combat_event_handler.cc  combat_event_handler.h  combat_vote_handler.cc  combat_vote_handler.h  event_observer.cc  event_observer.h  require_handler.cc  require_handler.h  scene_event_handler.cc  scene_event_handler.h  vote_handler.cc  vote_handler.h
src/tutorial/orcas/combat/server/event/meta/: CMakeLists.txt  event.proto  event_combat.proto  event_scene.proto
src/tutorial/orcas/combat/server/formula/: formula_app.cc  formula_app.h  formula_processor.h  require_handler.cc  require_handler.h
src/tutorial/orcas/combat/server/require/meta/: CMakeLists.txt  require.proto  require_combat.proto  require_formula.proto  (+1 more)
src/tutorial/orcas/combat/server/scene/: building.cc  building.h  combat_event_handler.cc  combat_event_handler.h  combat_require_handler.cc  combat_require_handler.h  entity_builder.cc  entity_builder.h  grid.cc  grid.h  move_action.cc  move_action.h  require_handler.cc  require_handler.h  scene.cc  scene.h  scene_app.cc  scene_app.h  scene_manager.cc  scene_manager.h  warrior.cc  warrior.h
src/tutorial/orcas/combat/server/vote/: CMakeLists.txt
src/tutorial/orcas/combat/test/: CMakeLists.txt  block_file.cc
src/tutorial/orcas/gateway/: CMakeLists.txt  aes.cc  aes.h  codec.cc  codec.h
src/tutorial/orcas/gateway/robot/: CMakeLists.txt  actor.cc  actor.h  main.cc  message_handler.cc  message_handler.h  robot_app.cc  robot_app.h  user_command_handler.cc  user_command_handler.h
src/tutorial/orcas/gateway/server/: CMakeLists.txt  actor.cc  actor.h  app_server.cc  app_server.h  combat_actor.cc  combat_actor.h  combat_actor_manager.cc  combat_actor_manager.h  combat_manager.cc  combat_manager.h  combat_message_handler.cc  combat_message_handler.h  config.cc  config.h  config.xml.example  main.cc  map_config.cc  map_config.h  message_dispatcher.cc  message_dispatcher.h  user_message_handler.cc  user_message_handler.h  warrior_config.cc  warrior_config.h
src/tutorial/orcas/protocol/cc/: warrior.pb.cc  warrior.pb.h
src/tutorial/orcas/protocol/meta/: CMakeLists.txt  building.proto  combat.proto  message.proto  position.proto  role.proto  warrior.proto
src/tutorial/orcas/util/: id_allocator.h  system_functions.cc  system_functions.h
src/tutorial/tools/generate_path_config/: CMakeLists.txt  generate_path_config.cc
(+24 files in other folders)
